unpackaged/main/default/objects/Lead/fields/New_MQL_Brand__c.field-meta.xml
<CustomField>
    <fullName>New_MQL_Brand__c</fullName>
    <description>Field used by the Underwriting Team to reassign Self-Serve MQLs to sales reps</description>
    <label>New MQL Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Brands</valueSetName>
    </valueSet>
</CustomField>