unpackaged/main/default/objects/Lead/fields/Opportunity_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Case_Safe_ID__c</fullName>
    <formula>casesafeid(ConvertedOpportunityId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converted Opportunity Casesafe ID</inlineHelpText>
    <label>Opportunity Case Safe ID</label>
    <type>Text</type>
</CustomField>