unpackaged/main/default/objects/Lead/fields/Original_MEL_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_MEL_Program_Name__c</fullName>
    <description>R1916824</description>
    <label>Original MEL Program Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>