unpackaged/main/default/objects/Lead/fields/Original_Referral_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Original_Referral_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Represents the referral partnership that first came in on the lead through a landing page or other automated method</inlineHelpText>
    <label>Original Referral Partnership</label>
    <referenceTo>Partnerships__c</referenceTo>
    <relationshipLabel>Leads (Original Referral Partnership)</relationshipLabel>
    <relationshipName>Leads1_del</relationshipName>
    <type>Lookup</type>
</CustomField>