unpackaged/main/default/objects/Lead/fields/Other_Productivity_Tools__c.field-meta.xml
<CustomField>
    <fullName>Other_Productivity_Tools__c</fullName>
    <label>Other Productivity Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Other_Productivity_Tools</valueSetName>
    </valueSet>
</CustomField>