unpackaged/main/default/objects/Lead/fields/Outbounding_SDR__c.field-meta.xml
<CustomField>
    <fullName>Outbounding_SDR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R152112, R1915061</description>
    <label>zz MyCase BDR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>