unpackaged/main/default/objects/Lead/fields/Outreach_Owner__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R1812311</description>
    <label>Outreach Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>