unpackaged/main/default/objects/Lead/fields/Owner_Change_Queued__c.field-meta.xml
<CustomField>
    <fullName>Owner_Change_Queued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R176988</description>
    <label>Owner Change Queued</label>
    <type>Checkbox</type>
</CustomField>