unpackaged/main/default/objects/Lead/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <inlineHelpText>The name of the partner that was provided on the partner lead registration form.</inlineHelpText>
    <label>Partner Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>