unpackaged/main/default/objects/Lead/fields/Partner_Referral_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referral_Email__c</fullName>
    <label>Partner Referral Email</label>
    <type>Email</type>
</CustomField>