unpackaged/main/default/objects/Lead/fields/Partner_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>Partner_Request_Form__c</fullName>
    <description>Used to track what partner inquiry form the prospective partner submitted</description>
    <label>Partner Request Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Types</valueSetName>
    </valueSet>
</CustomField>