unpackaged/main/default/objects/Lead/fields/Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Source__c</fullName>
    <description>#4730</description>
    <label>Partner Source</label>
    <length>150</length>
    <type>Text</type>
</CustomField>