unpackaged/main/default/objects/Lead/fields/PartnerStack_Partner_Key__c.field-meta.xml
<CustomField>
    <fullName>PartnerStack_Partner_Key__c</fullName>
    <externalId>true</externalId>
    <label>PartnerStack Partner Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>