unpackaged/main/default/objects/Lead/fields/Payment_Fees__c.field-meta.xml
<CustomField>
    <fullName>Payment_Fees__c</fullName>
    <description>R165219</description>
    <label>Payment Fees</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contingency</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>