unpackaged/main/default/objects/Lead/fields/Person_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_Master_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique Person ID that with follow Lead to Contact and will be used in external systems to uniquely ID this person in other systems</description>
    <label>Person Master ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>