unpackaged/main/default/objects/Lead/fields/Pre_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qualified__c</fullName>
    <description>R1915842</description>
    <label>zz MyCase Pre-Qualified</label>
    <type>Date</type>
</CustomField>