unpackaged/main/default/objects/Lead/fields/Primary_Practice_Area__c.field-meta.xml
<CustomField>
    <fullName>Primary_Practice_Area__c</fullName>
    <inlineHelpText>Single most notable practice area for the firm</inlineHelpText>
    <label>Primary Practice Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Practice_Area</valueSetName>
    </valueSet>
</CustomField>