unpackaged/main/default/objects/Lead/fields/Promo_Token__c.field-meta.xml
<CustomField>
    <fullName>Promo_Token__c</fullName>
    <label>Promo Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>