unpackaged/main/default/objects/Lead/fields/Qualification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Notes__c</fullName>
    <label>Qualification Notes</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>