unpackaged/main/default/objects/Lead/fields/Referral_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Partnership</label>
    <referenceTo>Partnerships__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>