unpackaged/main/default/objects/Lead/fields/Referral_Partnership_Channel__c.field-meta.xml
<CustomField>
    <fullName>Referral_Partnership_Channel__c</fullName>
    <description>We reference the Referral Partnership in our attribution reporting. This field makes it easy for Marketing to report on the various channels.</description>
    <formula>IF(
  ISBLANK(Referral_Partnership__c),
  &quot;Direct&quot;,
  CASE(
     Referral_Partnership__r.RecordType.Name,
    &quot;Affinity&quot;, &quot;Affinity&quot;,
    &quot;ISV Partner&quot;, &quot;Tech Partner&quot;,
    &quot;Consultant&quot;, &quot;Tech Partner&quot;,
&quot;Partner Stack&quot;, &quot;Technology Partner&quot;,
    &quot;Other&quot;
  )
)</formula>
    <label>Referral Partnership Channel</label>
    <type>Text</type>
</CustomField>