unpackaged/main/default/objects/Lead/fields/Referral_Token__c.field-meta.xml
<CustomField>
    <fullName>Referral_Token__c</fullName>
    <label>Referral Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>