unpackaged/main/default/objects/Lead/fields/RingLead_Merged_Values__c.field-meta.xml
<CustomField>
    <fullName>RingLead_Merged_Values__c</fullName>
    <description>Stores values from merged record from ringlead when values are overwritten</description>
    <label>RingLead Merged Values</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>