unpackaged/main/default/objects/Lead/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <inlineHelpText>The roles that the person operates in at their firm</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Role</valueSetName>
    </valueSet>
</CustomField>