unpackaged/main/default/objects/Lead/fields/SAL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SAL_Date_Time__c</fullName>
    <description>Date and time lead was sales accepted</description>
    <inlineHelpText>Date and time lead was sales accepted</inlineHelpText>
    <label>SAL Date Time</label>
    <type>DateTime</type>
</CustomField>