unpackaged/main/default/objects/Lead/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <inlineHelpText>Completed by the prospect on a partner web page.</inlineHelpText>
    <label>Sales Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>