unpackaged/main/default/objects/Lead/fields/Secondary_Practice_Areas__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Practice_Areas__c</fullName>
    <inlineHelpText>Additional practice areas for the firm besides the primary practice area</inlineHelpText>
    <label>Secondary Practice Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Practice_Area</valueSetName>
    </valueSet>
</CustomField>