unpackaged/main/default/objects/Lead/fields/Services_Requested__c.field-meta.xml
<CustomField>
    <fullName>Services_Requested__c</fullName>
    <description>Captures the service being requested from customer online forms.</description>
    <label>Services Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Automation/Template Building</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
                <isActive>false</isActive>
                <label>MyCase</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>