unpackaged/main/default/objects/Lead/fields/SIC_Description__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description__c</fullName>
    <description>Enriched by 6sense.</description>
    <label>SIC Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>