unpackaged/main/default/objects/Lead/fields/Spam_Bot_Risk__c.field-meta.xml
<CustomField>
    <fullName>Spam_Bot_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing field</description>
    <label>Spam/Bot Risk</label>
    <type>Checkbox</type>
</CustomField>