unpackaged/main/default/objects/Lead/fields/SQL_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SQL_Date_Time__c</fullName>
    <description>Date and time lead was sales qualified</description>
    <inlineHelpText>Date and time lead was sales qualified</inlineHelpText>
    <label>SQL Date Time</label>
    <type>DateTime</type>
</CustomField>