unpackaged/main/default/objects/Lead/fields/Status_Change_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Datetime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>Captures/displays the datetime that the lead&#39;s status last changed.</inlineHelpText>
    <label>Status Change Datetime</label>
    <type>DateTime</type>
</CustomField>