unpackaged/main/default/objects/Lead/fields/SyncToMarketo__c.field-meta.xml
<CustomField>
    <fullName>SyncToMarketo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is to know is sync to Marketo ?</description>
    <inlineHelpText>is Synced to Marketo?</inlineHelpText>
    <label>SyncToMarketo</label>
    <type>Checkbox</type>
</CustomField>