unpackaged/main/default/objects/Lead/fields/Test_Lead__c.field-meta.xml
<CustomField>
    <fullName>Test_Lead__c</fullName>
    <description>Checkbox is true if the Firstname or the Lastname of the lead contains &quot;Test&quot;</description>
    <formula>CONTAINS(FirstName, &quot;test&quot;) ||
CONTAINS(LastName, &quot;test&quot;)</formula>
    <label>Test Lead</label>
    <type>Checkbox</type>
</CustomField>