unpackaged/main/default/objects/Lead/fields/Timeline__c.field-meta.xml
<CustomField>
    <fullName>Timeline__c</fullName>
    <label>Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sure</fullName>
            </value>
            <value>
                <fullName>&lt; 1 week</fullName>
            </value>
            <value>
                <fullName>1 - 2 weeks</fullName>
            </value>
            <value>
                <fullName>2 - 4 weeks</fullName>
            </value>
            <value>
                <fullName>1 - 2 months</fullName>
            </value>
            <value>
                <fullName>3 - 5 months</fullName>
            </value>
            <value>
                <fullName>5 - 6 Months</fullName>
            </value>
            <value>
                <fullName>&gt; 6 months</fullName>
            </value>
            <value>
                <fullName>Did Not Ask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>