unpackaged/main/default/objects/Lead/fields/Unsubscribed_from_Docketwise__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed_from_Docketwise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribed from Docketwise</label>
    <type>Checkbox</type>
</CustomField>