unpackaged/main/default/objects/Lead/fields/User_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Owner_Id__c</fullName>
    <description>Created by R152223

DO NOT EDIT
Used in Process
Update MQL Fields on Lead</description>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Owner ID</label>
    <type>Text</type>
</CustomField>