unpackaged/main/default/objects/Lead/fields/utm_last_landing_page__c.field-meta.xml
<CustomField>
    <fullName>utm_last_landing_page__c</fullName>
    <description>The URL of the last page that a user visits before converting or filling out a form.</description>
    <label>utm_last_landing_page</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>