unpackaged/main/default/objects/Lead/fields/Workable__c.field-meta.xml
<CustomField>
    <fullName>Workable__c</fullName>
    <formula>(ISPICKVAL( Status , &#39;Assigned&#39;) ||
 ISPICKVAL( Status , &#39;New&#39;) ||
 ISPICKVAL( Status , &#39;Working&#39;) ||
 ISPICKVAL( Status , &#39;Engaged&#39;) 
 )

&amp;&amp;

(Last_Assigned_Date__c &gt;= NOW()-30 ||
 Days_Since_Last_Activity__c &lt;= 30
 )</formula>
    <label>Workable</label>
    <type>Checkbox</type>
</CustomField>