unpackaged/main/default/objects/Lead/fields/X6sense_Account_Source__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Account_Source__c</fullName>
    <description>Enriched by 6sense.</description>
    <label>6sense Account Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>