unpackaged/main/default/objects/Lead/fields/X6sense_Email__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Email__c</fullName>
    <description>Enriched by 6sense.</description>
    <label>6sense Email</label>
    <type>Email</type>
</CustomField>