unpackaged/main/default/objects/Lead/fields/X6sense_Employee_Count_Est__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Employee_Count_Est__c</fullName>
    <description>Enriched by 6sense.</description>
    <label>6sense Employee Count (Est)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>