unpackaged/main/default/objects/Lead/fields/X6sense_Revenue_Range__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Revenue_Range__c</fullName>
    <description>Enriched by 6sense</description>
    <label>6sense Revenue Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X6sense_Revenue_Range</valueSetName>
    </valueSet>
</CustomField>