unpackaged/main/default/objects/Lead/fields/X6sense_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Street_Address__c</fullName>
    <description>Enriched by 6sense.</description>
    <label>6sense Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>