unpackaged/main/default/objects/Lead/fields/ZOHO_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>ZOHO_Record_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ZOHO Record ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>