unpackaged/main/default/objects/Lead/fields/ZoomInfo_Individual_ID__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Individual_ID__c</fullName>
    <description>Created for R1916714</description>
    <label>ZoomInfo Individual ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>