unpackaged/main/default/objects/Lead/validationRules/Block_Status_of_Known.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Status_of_Known</fullName>
    <active>true</active>
    <description>Leads with a current lead status cannot be changed to a lead status of &#39;known&#39;.</description>
    <errorConditionFormula>$Permission.Bypass_Defined_VR_s = FALSE &amp;&amp;
ISCHANGED (Status ) &amp;&amp;
ISPICKVAL( Status , &#39;Known&#39;) &amp;&amp;
NOT(ISPICKVAL( PRIORVALUE( Status ) , &#39;&#39; ))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>The status of this lead can&#39;t be changed to &#39;Known&#39;</errorMessage>
</ValidationRule>